--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ar-EG.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ar-EG.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "عندما لا تستطيع الدفع باستخدام طريقة الدفع الواردة أعلاه، يُرجى لمس \"إلغاء\" واختيار منتج دفع آخر لإتمام عملية الدفع.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "ادفع عن طريق مصرفك";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "اسم المقيم ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "اسم المقيم ";
