--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/cs.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/cs.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Pokud nejste schopni zaplatit výše uvedenou platební metodou, klikněte na „Zrušit“ a pro dokončení platby vyberte jiný platební produkt.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Platba přes banku";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Jméno občana ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Jméno občana ";
