--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/en-IE.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/en-IE.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "When you are unable to pay using the payment method above, please tap 'Cancel' and select another payment product to complete your payment.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Pay with your bank";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Resident name ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Resident name ";
