--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/fr-CA.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/fr-CA.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Si vous êtes dans l’incapacité de payer au moyen de la méthode ci-dessus, appuyez sur « Annuler » et sélectionnez un autre moyen de paiement afin de finaliser la transaction.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Payez avec votre banque";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Nom du résident ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Nom du résident ";
