--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/hi.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/hi.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "यदि आप उपरोक्त भुगतान विधि इस्तेमाल करके भुगतान में असमर्थ हैं, तो कृपया 'रद्द करें' टैप करें और अपना भुगतान पूरा करने के लिए दूसरा भुगतान उत्पाद चुनें।";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "अपने बैंक के ज़रिए भुगतान करें";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "निवासी का नाम  ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "निवासी का नाम ";
