--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ja-JP.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ja-JP.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "上記の方法でお支払いができない場合は、「取り消し」を押し、他の方法を選択してお支払いを完了してください。";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "銀行振り込みする";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "居住者名 ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "居住者名 ";
