--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ko-KR.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ko-KR.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "위 결제 방법으로 결제할 수 없으면 '취소'를 탭하고 다른 결제 상품을 선택하여 결제를 완료하세요.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "은행 결제";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "거주자 이름 ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "거주자 이름 ";
