--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/nb.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/nb.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Dersom du ikke kan betale med betalingsmåten nevnt over klikker du på ‘Avbryt’ og velger en annen betalingsmåte for å fullføre din betaling.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Betal med banken din";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Navn";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Navn";
