--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/nl-BE.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/nl-BE.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Wanneer u niet kunt betalen via de bovenstaande betaalmethode, klik dan op 'Annuleren' en selecteer een andere betaalmethode om uw betaling af te ronden.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Betaal via uw bank";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Naam van ingezetene ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Naam van ingezetene ";
