--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/pt-BR.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/pt-BR.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Caso não possa pagar utilizando o método de pagamento acima, toque em “Cancelar” e selecione outro produto de pagamento para concluir seu pagamento.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Pague com seu banco";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Nome do residente ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Nome do residente ";
