--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/pt-PT.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/pt-PT.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Se não conseguir pagar usando o método de pagamento acima descrito, toque em \"Cancel\" (Cancelar) e selecione outro produto de pagamento para efetuar o pagamento.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Pague com o seu banco";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Nome de residente ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Nome de residente ";
