--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ro-RO.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ro-RO.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Atunci când nu puteți plăti utilizând metoda de plată de mai sus, vă rugăm să atingeți „Cancel” (anulare) și să selectați alt produs de plată pentru a vă finaliza plata.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Plătiți prin intermediul băncii dvs.";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Numele rezidentului ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Numele rezidentului ";
