--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ru-RU.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/ru-RU.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Если вам не удается оплатить указанным способом, нажмите «Отмена» и выберите другой способ оплаты для проведения платежа.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Оплатить через банк";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Имя держателя ID-карты ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Имя держателя ID-карты ";
