--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/sl-SI.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/sl-SI.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Kadar plačilo s prej navedeno metodo ni mogoče, tapnite »Prekliči« in za dokončanje plačila izberite drugo plačilno sredstvo.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Plačajte prek svoje banke";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Ime prebivalca ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Ime prebivalca ";
