--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/sw-KE.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/sw-KE.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Ukishindwa kulipa ukitumia mbinu ya malipo iliyo hapo juu, tafadhali gusa 'Ghairi' kisha uchague bidhaa nyingine ya malipo ili ukamilishe malipo yako.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Lipia kwa benki yako";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Jina la mkaazi ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Jina la mkaazi ";
