--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/vi-VN.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/vi-VN.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "Khi bạn không thể thanh toán bằng phương thức thanh toán ở trên, vui lòng chạm 'Hủy' và chọn sản phẩm thanh toán khác để hoàn tất việc thanh toán của bạn.";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "Thanh toán bằng ngân hàng của bạn";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "China UnionPay";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "Tên của cư dân ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "Tên của cư dân ";
