--- a/WorldlineConnectSDK/WorldlineConnectSDK.bundle/zh-Hans.lproj/WCSDKLocalizable.strings
+++ b/WorldlineConnectSDK/WorldlineConnectSDK.bundle/zh-Hans.lproj/WCSDKLocalizable.strings
@@ -533,6 +533,7 @@
 "gc.general.paymentProducts.863.wrongPaymentMethod" = "如果无法使用上述付款方式，请点击“取消”并选择其他付款产品来完成付款。";
 "gc.general.paymentProducts.864.name" = "Alipay";
 "gc.general.paymentProducts.865.name" = "使用银行账户支付";
+"gc.general.paymentProducts.866.name" = "AliPay+";
 "gc.general.paymentProducts.869.name" = "中国银联";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.label" = "居民姓名 ";
 "gc.general.paymentProducts.869.paymentProductFields.residentIdName.placeholder" = "居民姓名 ";
